--- a/index.html
+++ b/index.html
@@ -393,7 +393,7 @@
             </div>
             <div class="blog-content">
               <h3>
-                <a href="#">Building name</a>
+                <a href="Detail.html">Building name</a>
               </h3>
               <div class="row">
                 <div class="col-lg-6">
@@ -403,7 +403,7 @@
                   <p>Price</p>
                 </div>
               </div>
-              <a href="#" class="read-more">Details</a>
+              <a href="Detail.html" class="read-more">Details</a>
               <a href="#" class="read-more">Enquire Now</a>
             </div>
           </div>
@@ -416,7 +416,7 @@
             </div>
             <div class="blog-content">
               <h3>
-                <a href="#">Building name</a>
+                <a href="Detail.html">Building name</a>
               </h3>
               <div class="row">
                 <div class="col-lg-6">
@@ -426,7 +426,7 @@
                   <p>Price</p>
                 </div>
               </div>
-              <a href="#" class="read-more">Details</a>
+              <a href="Detail.html" class="read-more">Details</a>
               <a href="#" class="read-more">Enquire Now</a>
             </div>
           </div>
@@ -439,7 +439,7 @@
             </div>
             <div class="blog-content">
               <h3>
-                <a href="#">Building name</a>
+                <a href="Detail.html">Building name</a>
               </h3>
               <div class="row">
                 <div class="col-lg-6">
@@ -449,7 +449,7 @@
                   <p>Price</p>
                 </div>
               </div>
-              <a href="#" class="read-more">Details</a>
+              <a href="Detail.html" class="read-more">Details</a>
               <a href="#" class="read-more">Enquire Now</a>
             </div>
           </div>
@@ -473,7 +473,7 @@
             </div>
             <div class="blog-content">
               <h3>
-                <a href="#">Building name</a>
+                <a href="Detail.html">Building name</a>
               </h3>
               <div class="row">
                 <div class="col-lg-6">
@@ -483,7 +483,7 @@
                   <p>Price</p>
                 </div>
               </div>
-              <a href="#" class="read-more">Details</a>
+              <a href="Detail.html" class="read-more">Details</a>
               <a href="#" class="read-more">Enquire Now</a>
             </div>
           </div>
@@ -496,7 +496,7 @@
             </div>
             <div class="blog-content">
               <h3>
-                <a href="#">Building name</a>
+                <a href="Detail.html">Building name</a>
               </h3>
               <div class="row">
                 <div class="col-lg-6">
@@ -506,7 +506,7 @@
                   <p>Price</p>
                 </div>
               </div>
-              <a href="#" class="read-more">Details</a>
+              <a href="Detail.html" class="read-more">Details</a>
               <a href="#" class="read-more">Enquire Now</a>
             </div>
           </div>
@@ -519,7 +519,7 @@
             </div>
             <div class="blog-content">
               <h3>
-                <a href="#">Building name</a>
+                <a href="Detail.html">Building name</a>
               </h3>
               <div class="row">
                 <div class="col-lg-6">
@@ -529,7 +529,7 @@
                   <p>Price</p>
                 </div>
               </div>
-              <a href="#" class="read-more">Details</a>
+              <a href="Detail.html" class="read-more">Details</a>
               <a href="#" class="read-more">Enquire Now</a>
             </div>
           </div>
@@ -553,7 +553,7 @@
             </div>
             <div class="blog-content">
               <h3>
-                <a href="#">Building name</a>
+                <a href="Detail.html">Building name</a>
               </h3>
               <div class="row">
                 <div class="col-lg-6">
@@ -563,7 +563,7 @@
                   <p>Price</p>
                 </div>
               </div>
-              <a href="#" class="read-more">Details</a>
+              <a href="Detail.html" class="read-more">Details</a>
               <a href="#" class="read-more">Enquire Now</a>
             </div>
           </div>
@@ -576,7 +576,7 @@
             </div>
             <div class="blog-content">
               <h3>
-                <a href="#">Building name</a>
+                <a href="Detail.html">Building name</a>
               </h3>
               <div class="row">
                 <div class="col-lg-6">
@@ -586,7 +586,7 @@
                   <p>Price</p>
                 </div>
               </div>
-              <a href="#" class="read-more">Details</a>
+              <a href="Detail.html" class="read-more">Details</a>
               <a href="#" class="read-more">Enquire Now</a>
             </div>
           </div>
@@ -599,7 +599,7 @@
             </div>
             <div class="blog-content">
               <h3>
-                <a href="#">Building name</a>
+                <a href="Detail.html">Building name</a>
               </h3>
               <div class="row">
                 <div class="col-lg-6">
@@ -609,7 +609,7 @@
                   <p>Price</p>
                 </div>
               </div>
-              <a href="#" class="read-more">Details</a>
+              <a href="Detail.html" class="read-more">Details</a>
               <a href="#" class="read-more">Enquire Now</a>
             </div>
           </div>
