--- a/Search.html
+++ b/Search.html
@@ -486,7 +486,7 @@
                                     <span class="category"><a href="#">Ready To Move</a></span>
                                 </div>
                                 <div class="blog-content">
-                                    <h3><a href="#">Building Name</a></h3>
+                                    <h3><a href="Detail.html">Building Name</a></h3>
                                     <div class="row">
                                         <div class="col-lg-6">
                                             <p>Area Name</p>
@@ -497,7 +497,7 @@
                                     </div>
                                     <!-- <p>Building first evolved out dynamics between needs means available building
                                         materials attendant skills.</p> -->
-                                    <a href="#" class="read-more">Details</a>
+                                    <a href="Detail.html" class="read-more">Details</a>
                                     <a href="#" class="read-more">Enquire Now</a>
                                 </div>
                             </div>
@@ -509,7 +509,7 @@
                                     <span class="category"><a href="#">Possession from Dec 2025</a></span>
                                 </div>
                                 <div class="blog-content">
-                                    <h3><a href="#">Building Name</a></h3>
+                                    <h3><a href="Detail.html">Building Name</a></h3>
                                     <div class="row">
                                         <div class="col-lg-6">
                                             <p>Area Name</p>
@@ -518,7 +518,7 @@
                                             <p>Price</p>
                                         </div>
                                     </div>
-                                    <a href="#" class="read-more">Details</a>
+                                    <a href="Detail.html" class="read-more">Details</a>
                                     <a href="#" class="read-more">Enquire Now</a>
                                 </div>
                             </div>
@@ -530,7 +530,7 @@
                                     <span class="category"><a href="#">Ready To Move</a></span>
                                 </div>
                                 <div class="blog-content">
-                                    <h3><a href="#">Building Name</a></h3>
+                                    <h3><a href="Detail.html">Building Name</a></h3>
                                     <div class="row">
                                         <div class="col-lg-6">
                                             <p>Area Name</p>
@@ -539,7 +539,7 @@
                                             <p>Price</p>
                                         </div>
                                     </div>
-                                    <a href="#" class="read-more">Details</a>
+                                    <a href="Detail.html" class="read-more">Details</a>
                                     <a href="#" class="read-more">Enquire Now</a>
                                 </div>
                             </div>
@@ -551,7 +551,7 @@
                                     <span class="category"><a href="#">Possession from Dec 2025</a></span>
                                 </div>
                                 <div class="blog-content">
-                                    <h3><a href="#">Building Name</a></h3>
+                                    <h3><a href="Detail.html">Building Name</a></h3>
                                     <div class="row">
                                         <div class="col-lg-6">
                                             <p>Area Name</p>
@@ -560,7 +560,7 @@
                                             <p>Price</p>
                                         </div>
                                     </div>
-                                    <a href="#" class="read-more">Details</a>
+                                    <a href="Detail.html" class="read-more">Details</a>
                                     <a href="#" class="read-more">Enquire Now</a>
                                 </div>
                             </div>
@@ -572,7 +572,7 @@
                                     <span class="category"><a href="#">Ready To Move</a></span>
                                 </div>
                                 <div class="blog-content">
-                                    <h3><a href="#">Building Name</a></h3>
+                                    <h3><a href="Detail.html">Building Name</a></h3>
                                     <div class="row">
                                         <div class="col-lg-6">
                                             <p>Area Name</p>
@@ -581,7 +581,7 @@
                                             <p>Price</p>
                                         </div>
                                     </div>
-                                    <a href="#" class="read-more">Details</a>
+                                    <a href="Detail.html" class="read-more">Details</a>
                                     <a href="#" class="read-more">Enquire Now</a>
                                 </div>
                             </div>
@@ -593,7 +593,7 @@
                                     <span class="category"><a href="#">Possession from Dec 2025</a></span>
                                 </div>
                                 <div class="blog-content">
-                                    <h3><a href="#">Building Name</a></h3>
+                                    <h3><a href="Detail.html">Building Name</a></h3>
                                     <div class="row">
                                         <div class="col-lg-6">
                                             <p>Area Name</p>
@@ -602,7 +602,7 @@
                                             <p>Price</p>
                                         </div>
                                     </div>
-                                    <a href="#" class="read-more">Details</a>
+                                    <a href="Detail.html" class="read-more">Details</a>
                                     <a href="#" class="read-more">Enquire Now</a>
                                 </div>
                             </div>
